# desktop_ros2_ws

./: .gitignore  .gitmodules  README.md
install/: local_setup.sh  setup.sh
install/micro_ros_agent/lib/: libmicroxrcedds_agent.so.2.4.1
install/micro_ros_agent/lib/micro_ros_agent/: micro_ros_agent
install/micro_ros_agent/share/micro_ros_agent/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/micro_ros_agent/share/micro_ros_agent/cmake/: ament_cmake_export_dependencies-extras.cmake  micro_ros_agentConfig-version.cmake  micro_ros_agentConfig.cmake
install/micro_ros_agent/share/micro_ros_agent/environment/: ament_prefix_path.dsv  path.dsv
install/micro_ros_agent/share/micro_ros_agent/launch/: micro_ros_agent_launch.py
install/micro_ros_msgs/share/micro_ros_msgs/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/micro_ros_msgs/share/micro_ros_msgs/cmake/: ament_cmake_export_dependencies-extras.cmake  micro_ros_msgsConfig.cmake  (+7 more)
install/micro_ros_setup/lib/micro_ros_setup/: build_agent.sh  build_firmware.sh  clean_env.sh  component  configure_firmware.sh  create_agent_ws.sh  create_firmware_ws.sh  create_ws.sh  flash_firmware.sh  yaml_filter.py
install/micro_ros_setup/share/micro_ros_setup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_robot_description/share/my_robot_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/my_robot_localization/lib/my_robot_localization/: imu_republisher.py
install/my_robot_localization/share/my_robot_localization/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
install/rplidar_ros/lib/rplidar_ros/: rplidar_client  rplidar_composition  rplidar_node
install/rplidar_ros/share/rplidar_ros/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
log/: latest_build
src/bno055/bno055/params/: bno055_params.yaml
src/bno055/launch/: bno055.launch.py
src/hand_gesture_control/: CMakeLists.txt  README.md  package.xml  setup.cfg  setup.py
src/hand_gesture_control/launch/: hand_gesture_control.launch.py
src/hand_gesture_control/msg/: HandLandmark.msg  HandLandmarks.msg
src/hand_gesture_control/scripts/: HandTrackingModule.py  camera_node.py  gesture_control_node.py  hand_tracking_node.py  twist_stamper.py
src/micorRos_bot/: .gitignore  README.md  platformio.ini
src/micorRos_bot/include/: MotorController.h  globals.h  ros_interface.h
src/micorRos_bot/src/: MotorController.cpp  main.cpp  ros2_interface.cpp
src/microros_ws/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
src/microros_ws/log/: latest_build
src/my_robot_control/: CMakeLists.txt  README.md  my_robot_interface.xml  package.xml  setup.py
src/my_robot_control/config/: joystick.yaml  my_controllers.yaml  teleop_twist_keyboard.yaml  twist_mux.yaml
src/my_robot_control/include/my_robot_control/: my_robot_interface.hpp
src/my_robot_control/launch/: hardware_interface.launch.py  my_robot_control.launch.py  teleop_twist_keyboard.launch.py
src/my_robot_control/my_robot_control/: safety_stop_node.py
src/my_robot_control/src/: my_robot_interface.cpp
src/my_robot_control/urdf/: my_robot_control.urdf.xacro  my_robot_gazebo_control.xacro  my_robot_ros2_control.xacro
src/my_robot_description/: CMakeLists.txt  README.md  my_robot_tf_tree.gv  package.xml
src/my_robot_description/config/: gazebo.world  gazebo_params.yaml  joystick.yaml  my_controllers.yaml  my_robot.rviz  my_robot_description.rviz
src/my_robot_description/launch/: display.launch.xml  joystick.launch.py  my_robot.launch.py  my_robot_description.launch.py  my_robot_gazebo_launch.xml  rplidar.launch.py  sdf_2_gazebo.launch.py  teleop_twist.launch.py
src/my_robot_description/meshes_description/: my_robot.dae  my_robot.stl  my_robot_1.stl
src/my_robot_description/models/: model.config  model.sdf  my_robot_model.sdf
src/my_robot_description/models/meshes/: adafruit_bno055_stemma_qt_1.stl  c1m1_appearance_v2_20230926_3d_.stl  cam_v2_1_v1.stl  caster_wheel.stl  my_robot_base.stl  wheel.stl
src/my_robot_description/urdf/: camera.xacro  common_properties.xacro  gyroscope.xacro  imu.xacro  lidar.xacro  my_robot.urdf.xacro  my_robot_base.xacro  my_robot_base_mesh.urdf  my_robot_base_mesh.xacro  my_robot_gazebo_control.xacro  my_robot_ros2_control.xacro
src/my_robot_localization/: CMakeLists.txt  README.md  package.xml
src/my_robot_localization/config/: amcl.yaml  ekf.yaml  kf.rviz
src/my_robot_localization/launch/: global_localization.launch.py  local_localization.launch.py
src/my_robot_localization/my_robot_localization/: imu_republisher.py  innovation_evaluator.py  kalman_filter.py  kalman_filter_real.py  kalman_filter_sim.py  noisy_odometry_publisher.py  odometry_motion_model.py  velocity_comparison_node.py
src/my_robot_navigation/: CMakeLists.txt  package.xml
src/my_robot_navigation/config/: mapper_params_online_async.yaml
src/my_robot_navigation/launch/: my_robot_navigation.launch.py  rplidar.launch.py
src/my_robot_sensors/: LICENSE  README.md  package.xml  setup.cfg  setup.py
src/my_robot_sensors/config/: bno055_params.yaml  rplidar_params.yaml
src/my_robot_sensors/launch/: bno055.launch.py  camera.launch.py  rplidar.launch.py
src/my_robot_sensors/my_robot_sensors/: bno055_node.py  camera_node.py
src/my_robot_slam_core/: CMakeLists.txt  README.md  package.xml
src/my_robot_slam_core/config/: localization_params_online_async.yaml  mapping_params_online_async.yaml
src/my_robot_slam_core/launch/: online_async_launch.py
src/my_robot_slam_core/maps/office/: map.pgm  map.yaml
src/my_robot_slam_core/maps/office1.0/: map.pgm  map.yaml
src/transform_broadcaster/: package.xml  setup.cfg  setup.py
src/transform_broadcaster/launch/: odom_laser_broadcaster.launch.py
src/transform_broadcaster/transform_broadcaster/: odom_laser_broadcaster.py
(+258 files in other folders)
