<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>my_robot_control</name>
  <version>0.0.0</version>
  <description>Package for controlling the robot using various input methods such as joystick and keyboard.</description>
  <maintainer email="majd.fa.shahrour@outlook.com">majd</maintainer>
  <license>Apache 2.0</license>

  <!-- Build Tool Dependencies -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Package Dependencies -->
  <depend>rclpy</depend>
  <depend>joy</depend>
  <depend>teleop_twist_joy</depend>
  <depend>teleop_twist_keyboard</depend>
  <depend>twist_mux</depend>
  <depend>twist_stamper</depend>
  <depend>pynput</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  
  <!-- <depend>my_robot_interfaces</depend> -->

  <!-- Test Dependencies -->
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- Runtime Dependencies -->
  <exec_depend>ros2launch</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
